--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
+         <item name="android:datePickerDialogTheme">@style/DialogDatePicker.Theme</item>
     </style>
     <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/background_splash</item>
@@ -13,5 +14,16 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowDrawsSystemBarBackgrounds">false</item>
     </style>
+
+    <style name="DialogDatePicker.Theme" parent="Theme.AppCompat.Light.Dialog">
+        <!-- colorAccent is the color of header of picker and selector -->
+        <item name="colorAccent">#7c257a</item>
+        <!-- textColor is the color of numbers and text buttons -->
+        <item name="android:textColor">#333333</item>
+        <!-- textColorPrimary is the color of text of month. -->
+        <item name="android:textColorPrimary">#666666</item>
+    </style>
+    
+
 
 </resources>
